# Simple_web_app_on_Django

./: README.md  pyproject.toml
quotes/utils/: migration.py
