[tool.poetry]
name = "tes"
version = "0.1.0"
description = ""
authors = ["Alexey-Goryachev <goryachev.alex00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
